[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luna"
version = "0.9.1"
authors = [
	{name="Yoda", email="im.yod4@gmail.com"}
]
description = "An educational library for datastructure and algorithms"
readme = "README.md"
require-python = ">3.1"
classifires = [
	"Programming Language :: Python :: 3",
	"Licence :: OSI Approved :: MIT Licence",
	"Operating System :: OS Independent",
]

[project.urls]
"HomePage" = "https://github.com/ImYod4/zi"

